two tier spawn management system implemented.